Cleaned up the data read/write methods.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,10 @@
 
-* Have logger constructor that accepts logging level.
-
 * Control buffer sizes by macros users can override.
 
-* More scalable command context structure.
 
-* Test message sending.
+* Evaluate usage of an arduino task scheduler. E.g. https://reference.arduino.cc/reference/en/libraries/taskscheduler . E.g. does it work well with the debugger?
+
+* Clean up in code TODOs, asserts, etc.
 
 * Figure out how to run unit tests.
 
