--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,8 @@
 
-* Write unit tests for the data, encoder, decoder, classes.
-
+* Write a unit test for the event handler or drop it all together.
+* Write a unit test for the client timeout cleanup.
+* Have the client class in .h and .cpp files of its own.
+* Have consitent prafix to all the files and the classes. E.g. packets_xxxx or serial_packets_xxxx
 * Clean up in code TODOs, asserts, etc.
 
 
